# aoc-rust

./: .gitignore  Cargo.toml  README.md  TESTING.md  build.rs  flake.nix
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
src/: day2015_01.rs  day2024_01.rs  day2024_02.rs  day2024_03.rs  day2024_04.rs  day2024_05.rs  lib.rs
tests/: day2015_01.rs  day2024_01.rs  day2024_02.rs  day2024_03.rs  day2024_04.rs  day2024_05.rs
