[package]
name = "adv-code-2024"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
code-timing-macros = { version = "0.0.6", features = ["release"] }
const_format = "0.2.35"
tracing = { version = "0.1.41", optional = true }

# Additional recommended dependencies
itertools = "0.14.0"
regex = "1.12.3"

# rand
# num
# nalgebra
# petgraph
# bevy
# ratatui

[dev-dependencies]
proptest = "1.10.0"

[features]
tracing = ["dep:tracing"]   # enables tracing support used by code_timing_macros
